v3.1.0/_sources/plugins/license_device_license_summary_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.license_device_license_summary_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.license_device_license_summary_info -- Information module for License Device License Summary
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.1.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.license_device_license_summary_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all License Device License Summary.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-device_type"></div>
                    <b>device_type</b>
                    <a class="ansibleOptionLink" href="#parameter-device_type" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Device_type query parameter. Type of device.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-device_uuid"></div>
                    <b>device_uuid</b>
                    <a class="ansibleOptionLink" href="#parameter-device_uuid" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Device_uuid query parameter. Id of device.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-dna_level"></div>
                    <b>dna_level</b>
                    <a class="ansibleOptionLink" href="#parameter-dna_level" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Dna_level query parameter. Device Cisco DNA license level.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-limit"></div>
                    <b>limit</b>
                    <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Limit query parameter.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-order"></div>
                    <b>order</b>
                    <a class="ansibleOptionLink" href="#parameter-order" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Order query parameter. Sorting order.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-page_number"></div>
                    <b>page_number</b>
                    <a class="ansibleOptionLink" href="#parameter-page_number" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Page_number query parameter. Page number of response.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-registration_status"></div>
                    <b>registration_status</b>
                    <a class="ansibleOptionLink" href="#parameter-registration_status" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Registration_status query parameter. Smart license registration status of device.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-smart_account_id"></div>
                    <b>smart_account_id</b>
                    <a class="ansibleOptionLink" href="#parameter-smart_account_id" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Smart_account_id query parameter. Id of smart account.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-sort_by"></div>
                    <b>sort_by</b>
                    <a class="ansibleOptionLink" href="#parameter-sort_by" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Sort_by query parameter. Sort result by field.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-virtual_account_name"></div>
                    <b>virtual_account_name</b>
                    <a class="ansibleOptionLink" href="#parameter-virtual_account_name" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Virtual_account_name query parameter. Name of virtual account.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `License Device License Summary reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the License Device License Summary object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all License Device License Summary
      cisco.dnac.license_device_license_summary_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        page_number: 0
        order: string
        sort_by: string
        dna_level: string
        device_type: string
        limit: 0
        registration_status: string
        virtual_account_name: string
        smart_account_id: 0
        device_uuid: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">list</span>
                       / <span style="color: purple">elements=dictionary</span>                    </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">[
      {
        &quot;authorization_status&quot;: &quot;string&quot;,
        &quot;last_updated_time&quot;: &quot;string&quot;,
        &quot;is_performance_allowed&quot;: true,
        &quot;sle_auth_code&quot;: &quot;string&quot;,
        &quot;throughput_level&quot;: &quot;string&quot;,
        &quot;hsec_status&quot;: &quot;string&quot;,
        &quot;device_uuid&quot;: &quot;string&quot;,
        &quot;site&quot;: &quot;string&quot;,
        &quot;total_access_point_count&quot;: 0,
        &quot;model&quot;: &quot;string&quot;,
        &quot;is_wireless_capable&quot;: true,
        &quot;registration_status&quot;: &quot;string&quot;,
        &quot;sle_state&quot;: &quot;string&quot;,
        &quot;performance_license&quot;: &quot;string&quot;,
        &quot;license_mode&quot;: &quot;string&quot;,
        &quot;is_license_expired&quot;: true,
        &quot;software_version&quot;: &quot;string&quot;,
        &quot;reservation_status&quot;: &quot;string&quot;,
        &quot;is_wireless&quot;: true,
        &quot;network_license&quot;: &quot;string&quot;,
        &quot;evaluation_license_expiry&quot;: &quot;string&quot;,
        &quot;wireless_capable_network_license&quot;: &quot;string&quot;,
        &quot;device_name&quot;: &quot;string&quot;,
        &quot;device_type&quot;: &quot;string&quot;,
        &quot;dna_level&quot;: &quot;string&quot;,
        &quot;virtual_account_name&quot;: &quot;string&quot;,
        &quot;last_successful_rum_usage_upload_time&quot;: &quot;string&quot;,
        &quot;ip_address&quot;: &quot;string&quot;,
        &quot;wireless_capable_dna_license&quot;: &quot;string&quot;,
        &quot;mac_address&quot;: &quot;string&quot;,
        &quot;customer_tag1&quot;: &quot;string&quot;,
        &quot;customer_tag2&quot;: &quot;string&quot;,
        &quot;customer_tag3&quot;: &quot;string&quot;,
        &quot;customer_tag4&quot;: &quot;string&quot;,
        &quot;smart_account_name&quot;: &quot;string&quot;
      }
    ]</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

